Fixed Scrollbar, need to add pageindicator now.

--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,20 @@ h1, h2, p {
 .parallax {
   height: 100vh; /* Full viewport height for each layer */
 }
+/* Custom scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(to bottom, #555, #aaa);
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(to bottom, #333, #777);
+}
+
+::-webkit-scrollbar-track {
+  background: #1a1a1a;
+}
